# ship-coordination-service

./: .gitignore  .secrets.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  settings.yaml
alembic/: env.py
alembic/versions/: 2025_02_23_1546-e04a6123dfff_initial.py
src/: __init__.py  error.py  error_handlers.py  errors.py  make_app.py  protocols.py  session_holder.py
src/constants/: misc.py
src/models/: base.py  token.py  user.py
src/route/: __init__.py  dependencies.py  errors.py  service.py
src/route/auth/: dependencies.py  errors.py  route.py  schema.py  service.py
src/route/user/: dependencies.py  route.py  service.py
src/route/v1/: __init__.py  route.py  schema.py  service.py  util.py
src/schema/: __init__.py  error.py  misc.py  model.py  token.py  user.py
src/util/: __init__.py  contextmanager.py  datetime.py  fastapi.py  pydantic.py  secrets.py  string.py
tests/: conftest.py  test_colisions.py  test_get_ship.py  test_list_ships.py  test_position_publish.py
tests/auth/: test_signin.py  test_signup.py
tests/helpers/: __init__.py  timer.py  users.py
tests/user/: test_get_me.py  test_get_user.py  test_list.py
