[project]
name = "ship-coordination-service"
version = "0.0.0a1"
description = ""
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "dynaconf>=3.2.10",
    "fastapi[standard]>=0.115.8",
    "pydantic>=2.10.6",
]

[dependency-groups]
dev = [
    "async-asgi-testclient>=1.4.11",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.11.10",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"
]
pythonpath = ["."]
python_functions = "test_*"
python_files = "test_*.py"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.ruff]
line-length = 100
exclude = [".venv"]
